RESOLVED FIXED288079
Debug build failure on armv7 due to assertions in YarrInterpreter
https://bugs.webkit.org/show_bug.cgi?id=288079
Summary Debug build failure on armv7 due to assertions in YarrInterpreter
Max Rottenkolber
Reported 2025-02-20 04:02:00 PST
YarrInterpreter alignment assertions fail at build time on armv7 because sizeof(void*) has an unexpected value. Should use alignof(max_align_t) instead to reason about alignment guarantees.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-27 04:02:22 PST
EWS
Comment 2 2025-03-11 10:09:08 PDT
Committed 291952@main (6040dcdd4501): <https://commits.webkit.org/291952@main> Reviewed commits have been landed. Closing PR #40963 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.