[JSC][armv7] Fix YarrInterpreter alignment checks https://bugs.webkit.org/show_bug.cgi?id=288079

Reviewed by NOBODY (OOPS!).

Use alignof(max_align_t) to check mandated alignment instead of sizeof(void*)
which does not correspond to the actual alignment on armv7.

* Source/JavaScriptCore/yarr/YarrInterpreter.cpp:
(JSC::Yarr::Interpreter::DisjunctionContext::allocationSize):
(JSC::Yarr::Interpreter::ParenthesesDisjunctionContext::allocationSize):